--- a/MeshDeformation/MeshDeformation.vcxproj.filters
+++ b/MeshDeformation/MeshDeformation.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="BoundingVolume.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Ray.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DataConvey.cpp">
@@ -87,6 +90,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="BoundingVolume.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Ray.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
