--- a/MeshDeformation/MeshDeformation.vcxproj
+++ b/MeshDeformation/MeshDeformation.vcxproj
@@ -70,8 +70,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\MyProgram\ComputerGraphics\MeshDeformation\Lib\64\include;D:\MyProgram\ComputerGraphics\MeshDeformation\Lib\64\glm;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\MyProgram\ComputerGraphics\MeshDeformation\Lib\64\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\Lib\64\include;..\Lib\64\glm;$(IncludePath)</IncludePath>
+    <LibraryPath>..\Lib\64\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
